--- a/.github/workflows/.deploy_to_staging.yml
+++ b/.github/workflows/.deploy_to_staging.yml
@@ -28,6 +28,6 @@ jobs:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
 
       - name: Deploy
-        run: railway up -ci --service fastify-webapp-sample
+        run: railway up --ci --service fastify-webapp-sample
         env: 
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
